debug, fix avatar not showing, avatar dropbox tweaks - part 3
Fix bug where avatar cant show in other page other than home, delete @base_bp.app_context_processor
def user_info():
    return dict(logged_in_user=current_user)
instead just use current_user in html and added @base_bp.route('/uploads/avatar/<path:filename>')
def avatar(filename):
    filepath = os.path.join('uploads', 'avatar', filename)
    return serve_instance_file(filepath) by importing serve func from files.py in utils folders which now allow all page to get the passed info. tweaks avatar dropbox for future improvement.

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -86,7 +86,6 @@ body {
 .avatar-dropdown {
   position: relative;
   display: inline-block;
-  margin-left: 0px;
 }
 
 .avatar-dropdown img {
@@ -105,6 +104,9 @@ body {
 .avatar-dropdown .dropdown-content {
   display: none;
   position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
   right: 0;
   background-color: #1a1a1a;
   min-width: 150px;
